Cambiando textos integrando con git

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="opcion4">Recycler View</string>
     <string name="Salir">Salir</string>
     <string name="tituloAplicacion">Mi primera app</string>
-    <string name="app_name">Mi Super Parte1 Wilson</string>
+    <string name="app_name">Mi Super Parte1 Wilson GITHUB</string>
     <string name="action_settings">Configuración</string>
     <string name="opcion5">Mi spinner</string>
 
